--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "lucide-react": "^0.515.0",
     "motion": "^12.18.1",
     "next": "15.3.3",
+    "pdfjs-dist": "^5.3.31",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "tesseract.js": "^6.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
