--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jspdf": "^3.0.1",
     "jszip": "^3.10.1",
     "lucide-react": "^0.515.0",
+    "mammoth": "^1.9.1",
     "motion": "^12.18.1",
     "next": "15.3.3",
     "pdfjs-dist": "^5.3.31",
